RESOLVED FIXED44550
[CHROMIUM] Failing layout tests on Chromium/Linux
https://bugs.webkit.org/show_bug.cgi?id=44550
Summary [CHROMIUM] Failing layout tests on Chromium/Linux
Stephen White
Reported 2010-08-24 14:11:46 PDT
LayoutTests/fast/canvas/arc-crash.html = CRASH LayoutTests/fast/canvas/canvas-state-intact-after-putImageData.html = CRASH LayoutTests/fast/canvas/toDataURL-supportedTypes.html = CRASH
Attachments
Patch (1.39 KB, patch)
2010-08-24 14:24 PDT, Stephen White
dumi: review+
Stephen White
Comment 1 2010-08-24 14:24:23 PDT
James Robinson
Comment 2 2010-08-24 14:32:39 PDT
Fix looks correct and needed in general. I'm pretty curious why we can't repro this locally.
Dumitru Daniliuc
Comment 3 2010-08-24 14:34:56 PDT
Comment on attachment 65324 [details] Patch rs=me.
Stephen White
Comment 4 2010-08-24 14:52:16 PDT
Stephen White
Comment 5 2010-08-24 14:54:00 PDT
BTW, I did manage to repro, in the end, and confirmed that this fix ameliorates the crashes. Just had to run all the tests, instead of just the failing ones.
Note You need to log in before you can comment on or make changes to this bug.