2010-08-24  Stephen White  <senorblanco@chromium.org>

Reviewed by Dumitru Daniliuc.

        Speculative fix for layout test failures on Chrome/Linux.
        https://bugs.webkit.org/show_bug.cgi?id=44550

        Tests fast/canvas/arc-crash.html, fast/canvas/canvas-state-intact-after-putImageData.html, and fast/canvas/toDataURL-supportedTypes.html are failing on Chrome/Linux.  Can't repro the failure locally, but this fix can't hurt.

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::paintRenderingResultsToCanvas):


Canonical link: https://commits.webkit.org/56717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65938 268f45cc-cd09-0410-ab3c-d52691b4dbfc