WebCore/html/canvas/CanvasRenderingContext2D.cpp
@@ -1874,7 +1874,8 @@ const Font& CanvasRenderingContext2D::accessFont()
 void CanvasRenderingContext2D::paintRenderingResultsToCanvas()
 {
 #if ENABLE(ACCELERATED_2D_CANVAS)
-    drawingContext()->syncSoftwareCanvas();
+    if (GraphicsContext* c = drawingContext())
+        c->syncSoftwareCanvas();
 #endif
 }
 
